WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164555
URLParser should not consider path of URLs with no host to start at the first slash after the colon
https://bugs.webkit.org/show_bug.cgi?id=164555
Summary
URLParser should not consider path of URLs with no host to start at the first...
Alex Christensen
Reported
2016-11-09 12:03:23 PST
URLParser should not consider path of URLs with no host to start at the first slash after the colon
Attachments
Patch
(23.77 KB, patch)
2016-11-09 12:11 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(25.30 KB, patch)
2016-11-09 12:57 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2016-11-09 12:11:32 PST
Created
attachment 294262
[details]
Patch
Alex Christensen
Comment 2
2016-11-09 12:57:26 PST
Created
attachment 294270
[details]
Patch
WebKit Commit Bot
Comment 3
2016-11-09 16:33:36 PST
Comment on
attachment 294270
[details]
Patch Clearing flags on attachment: 294270 Committed
r208508
: <
http://trac.webkit.org/changeset/208508
>
WebKit Commit Bot
Comment 4
2016-11-09 16:33:40 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug